2006-07-08  Aidan Kehoe  <kehoea@parhasard.net>

	* symbols.c (Fsubr_name):
	Use the CHECK_SUBR macro instead of the GNU code's explicit if
	statement.

2006-07-08  Aidan Kehoe  <kehoea@parhasard.net>

	* charset.h:
	Move to 7 bits instead of 5 for the first field of a character.

2006-07-07  Aidan Kehoe  <kehoea@parhasard.net>

	* config.h.in:
	Don't declare inline macros as `extern' if we're building a
	standalone program, because their extern definitions in inline.c
	are unlikely to be included.

2006-06-24  Stephen J. Turnbull  <stephen@xemacs.org>

	* gc.c (gc_mark_root_set): Quiet GCC 4 whining about unused values.

2006-06-29  Jerry James  <james@xemacs.org>

	* scrollbar-gtk.c (gtk_free_scrollbar_instance): Compare
	instance->scrollbar_data against NULL before using it.
	* scrollbar-msw.c (mswindows_free_scrollbar_instance): Compare
	sb->scrollbar_data against NULL before using it.

2006-06-22  Jerry James  <james@xemacs.org>

	* redisplay-gtk.c (gtk_output_display_block): Fix a Dynarr leak.
	Don't create the buffer if there is nothing to do.
	* redisplay-msw.c (mswindows_output_display_block): Ditto.
	* redisplay-output.c (redisplay_output_layout): Ditto.
	* redisplay-tty.c (tty_output_display_block): Ditto.
	* redisplay-x.c (x_output_display_block): Ditto.

2006-06-23  Stephen J. Turnbull  <stephen@xemacs.org>

	* font-mgr.c (extract_fcapi_string):
	(fc_intern):
	(Ffc_name_parse):
	(Ffc_name_unparse):
	(Ffc_pattern_add):
	(Ffc_pattern_del):
	(Ffc_pattern_get):
	(string_list_to_fcobjectset):
	fc_intern and extract_fcapi_string should return
	[const] Extbyte *.  Make it so, update callers.

2006-05-26  Stephen J. Turnbull  <stephen@xemacs.org>

	* objects-x.c (x_initialize_font_instance):
	(x_font_instance_truename):
	(charset_table):
	(x_find_charset_font):
	Pander to GCC4 signed character paranoia.

2006-06-19  Jerry James  <james@xemacs.org>

	* device-x.c (x_IO_error_handler): Do not dereference d if it is
	NULL.